stack/galileo/registry/jhipster-registry-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: galileo-ing
  namespace: galileo-registry
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eureka.supos.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jhipster-registry
          servicePort: 8761
